--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -64,7 +64,7 @@ html {
   margin: 0;
 }
 body {
-  font-family: Arial, sans-serif;
+  font-family: "Inter", sans-serif;
   background-color: rgb(10, 10, 35);
   background-blend-mode: darken;
   color: #ffffffda;
@@ -448,6 +448,45 @@ button {
 .card p {
   color: #ccc;
   font-size: 0.9em;
+}
+/* TESTIMONIAL SECTIION  */
+.container {
+    width: 100%;
+    padding: 0 5rem;
+    margin-bottom: 5rem;
+}
+.section-title {
+    color: #00aaff;
+    text-align: center;
+    margin-bottom: 2rem;
+    font-size: 2rem;
+    font-weight: bold;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+}
+.testimonials-grid {
+    display: flex;
+    justify-content: center;
+    align-items: stretch;
+    gap: 2rem;
+    flex-wrap: wrap;
+}
+.testimonial-card {
+    background: #1f2937;
+    background-color: #0e0e0e;
+    border-radius: 1.25rem;
+    box-shadow: 0 8px 32px rgba(8, 80, 236, 0.12);
+    padding: 2rem 2rem 1.5rem 2rem;
+    width: 100%;
+    display: flex
+;
+    flex-direction: row;
+    align-items: center;
+    transition: opacity 0.8s ease, transform 0.8s cubic-bezier(.4,2,.3,1);
+}
+.testimonial-content {
+    text-align: center;
+    line-height: 1.9;
 }
 /* THE STARTING OF CONTACT SECTION  */
 #contact {
