--- a/CSS/Stylesheet.css
+++ b/CSS/Stylesheet.css
@@ -141,69 +141,15 @@ h1 .name, h1 .web {
   animation: typewriter 3s steps(30, end) forwards;
 }
 
-h1 .char {
-  display: inline-block;
-  opacity: 0;
-  transform: scale(0.5);
-  animation: popIn 0.3s ease-out forwards;
-}
-
-@keyframes typewriter {
-  from { width: 0; }
-  to { width: 100%; }
-}
-
-@keyframes popIn {
-  to {
-    opacity: 1;
-    transform: scale(1);
-  }
-}
-
-/* Stagger the pop-in effect for each character */
-h1 .name .char:nth-child(1) { animation-delay: 0.1s; }
-h1 .name .char:nth-child(2) { animation-delay: 0.2s; }
-h1 .name .char:nth-child(3) { animation-delay: 0.3s; }
-h1 .name .char:nth-child(4) { animation-delay: 0.4s; }
-h1 .name .char:nth-child(5) { animation-delay: 0.5s; }
-h1 .name .char:nth-child(6) { animation-delay: 0.6s; }
-h1 .name .char:nth-child(7) { animation-delay: 0.7s; }
-h1 .name .char:nth-child(8) { animation-delay: 0.8s; }
-h1 .name .char:nth-child(9) { animation-delay: 0.9s; }
-h1 .name .char:nth-child(10) { animation-delay: 1.0s; }
-h1 .name .char:nth-child(11) { animation-delay: 1.1s; }
-h1 .name .char:nth-child(12) { animation-delay: 1.2s; }
-h1 .name .char:nth-child(13) { animation-delay: 1.3s; }
-h1 .name .char:nth-child(14) { animation-delay: 1.4s; }
-h1 .name .char:nth-child(15) { animation-delay: 1.5s; }
-h1 .name .char:nth-child(16) { animation-delay: 1.6s; }
-h1 .name .char:nth-child(17) { animation-delay: 1.7s; }
-
-h1 .web .char:nth-child(1) { animation-delay: 1.8s; }
-h1 .web .char:nth-child(2) { animation-delay: 1.9s; }
-h1 .web .char:nth-child(3) { animation-delay: 2.0s; }
-h1 .web .char:nth-child(4) { animation-delay: 2.1s; }
-h1 .web .char:nth-child(5) { animation-delay: 2.2s; }
-h1 .web .char:nth-child(6) { animation-delay: 2.3s; }
-h1 .web .char:nth-child(7) { animation-delay: 2.4s; }
-h1 .web .char:nth-child(8) { animation-delay: 2.5s; }
-h1 .web .char:nth-child(9) { animation-delay: 2.6s; }
-h1 .web .char:nth-child(10) { animation-delay: 2.7s; }
-h1 .web .char:nth-child(11) { animation-delay: 2.8s; }
-h1 .web .char:nth-child(12) { animation-delay: 2.9s; }
-h1 .web .char:nth-child(13) { animation-delay: 3.0s; }
-h1 .web .char:nth-child(14) { animation-delay: 3.1s; }
-h1 .web .char:nth-child(15) { animation-delay: 3.2s; }
-h1 .web .char:nth-child(16) { animation-delay: 3.3s; }
-h1 .web .char:nth-child(17) { animation-delay: 3.4s; }
 h1 {
-  font-size: 2.5em;
+  font-size: 2rem;
   color: #00aaff;
   line-height: 1.2;
   margin-bottom: 1.5rem;
 }
 h1 .name {
   color: #fff;
+  display: block;
 }
 #hero h3 {
   background-color: #13133f;
@@ -229,6 +175,12 @@ h1 .name {
   display: flex;
   align-items: center;
   gap: 0.5rem;
+}
+.button a{
+  text-decoration: none;
+}
+.button a:visited{
+  color: #ffffff;
 }
 .button:hover {
   background-color: #0099cc;
@@ -487,6 +439,28 @@ button {
 .testimonial-content {
     text-align: center;
     line-height: 1.9;
+}
+.testimonial-image {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 1rem;
+    margin-bottom: 2rem;
+}
+.testimonial-image img {
+    width: 100px;
+    height: 100px;
+    border-radius: 10%;
+    object-fit: cover;
+    border: 4px solid #00aaff;
+    background-color: #fff;
+}
+h3{
+  text-transform: uppercase;
+  font-size: 100;
+}
+.container span {
+  display: block;
 }
 /* THE STARTING OF CONTACT SECTION  */
 #contact {
