Hosted all the image in imgBB

--- a/CSS/Responsiveness.css
+++ b/CSS/Responsiveness.css
@@ -122,7 +122,7 @@
     padding: 0;
   }
   .hero-img {
-    background-image: url(../image/Tech-image-background.jpg);
+    background-image: url(https://i.ibb.co/k61dp91s/Tech-image-background.jpg);
     background-repeat: no-repeat;
     background-size: cover;
     width: 100%;
